# commit-grabber

./: .gitignore  pyproject.toml
commit_grabber/: __main__.py  commit_grabber.py
