[tool.poetry]
name = "commit-grabber"
version = "0.1.0"
description = ""
authors = ["mozharovsky <mozharovsky@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyDriller = "^1.15.4"
dataclasses-json = "^0.5.2"

# Conditionally installed for backward compatibility with older Python versions
dataclasses = { version = "^0.7", python = "^3.6,<3.7" }
tqdm = "^4.55.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
